force-app/main/default/objects/TTS_Protection_Claim__c/TTS_Protection_Claim__c.object-meta.xml
<CustomObject>
    <description>The Protection Claim object stores individual patent claims under a Protection record, including the claim text and its current status. Commonly used to track pending, amended, issued, rejected, litigated, or invalidated claims.</description>
    <label>Protection Claim</label>
    <nameField>
        <displayFormat>PC{000000}</displayFormat>
        <label>Protection Claim ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Protection Claims</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>