force-app/main/default/objects/TTS_Protection_Claim__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <description>Stores the text of an individual claim associated with a protection record.</description>
    <inlineHelpText>Enter the full text of the individual patent claim.</inlineHelpText>
    <label>Claim</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>