force-app/main/default/objects/TTS_Protection_Claim__c/fields/Protection__c.field-meta.xml
<CustomField>
    <fullName>Protection__c</fullName>
    <description>Links the claim to its parent Protection record.</description>
    <inlineHelpText>Select the protection record that contains this claim.</inlineHelpText>
    <label>Patent</label>
    <referenceTo>TTS_Protection__c</referenceTo>
    <relationshipLabel>Protection Claims</relationshipLabel>
    <relationshipName>Protection_Claims</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>